# mastermind-haskell

./: README.md  mastermind-haskell.cabal
app/: Main.hs
lib/: Mastermind.hs
test/: Spec.hs
