name:                mastermind
version:             0.1.0.0
synopsis:            Haskell implementation of Knuth's algorithm to solve MasterMind within 5 guesses
license:             MIT
author:              Jonathan Taylor
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, random
  hs-source-dirs:      lib
  exposed-modules:     Mastermind

executable app
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, split, deepseq, parallel, mastermind
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N"

test-suite tests
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, hspec, mastermind
  hs-source-dirs:      test
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
